--- a/ukol8.ipynb
+++ b/ukol8.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,9 +11,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>nazev_cz</th>\n",
+       "      <th>nazev_en</th>\n",
+       "      <th>trida_cz</th>\n",
+       "      <th>cena</th>\n",
+       "      <th>k_prohlidce</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Šváb syčivý</td>\n",
+       "      <td>Madagascar giant cockroach</td>\n",
+       "      <td>Bezobratlí</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Pakobylka okřídlená</td>\n",
+       "      <td>Pink-winged stick insect</td>\n",
+       "      <td>Bezobratlí</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>16</td>\n",
+       "      <td>Tayra</td>\n",
+       "      <td>Tayra</td>\n",
+       "      <td>Savci</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>35</td>\n",
+       "      <td>Kajmanka supí</td>\n",
+       "      <td>Alligator snapping turtle</td>\n",
+       "      <td>Plazi</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>37</td>\n",
+       "      <td>Želva žlutočelá</td>\n",
+       "      <td>Indochinese box turtle</td>\n",
+       "      <td>Plazi</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>508</th>\n",
+       "      <td>1417</td>\n",
+       "      <td>Rosnice šalamounská</td>\n",
+       "      <td></td>\n",
+       "      <td>Obojživelníci</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>509</th>\n",
+       "      <td>1418</td>\n",
+       "      <td>Létavka obecná</td>\n",
+       "      <td></td>\n",
+       "      <td>Obojživelníci</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>510</th>\n",
+       "      <td>1419</td>\n",
+       "      <td>Bažant paví</td>\n",
+       "      <td></td>\n",
+       "      <td>Ptáci</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>511</th>\n",
+       "      <td>1420</td>\n",
+       "      <td>Sojkovec rezavouchý</td>\n",
+       "      <td></td>\n",
+       "      <td>Ptáci</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>512</th>\n",
+       "      <td>1421</td>\n",
+       "      <td>Kachnice kaštanová</td>\n",
+       "      <td></td>\n",
+       "      <td>Ptáci</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>513 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       id             nazev_cz                     nazev_en       trida_cz  \\\n",
+       "0       7          Šváb syčivý  Madagascar giant cockroach      Bezobratlí   \n",
+       "1       8  Pakobylka okřídlená     Pink-winged stick insect     Bezobratlí   \n",
+       "2      16                Tayra                        Tayra          Savci   \n",
+       "3      35        Kajmanka supí    Alligator snapping turtle          Plazi   \n",
+       "4      37      Želva žlutočelá       Indochinese box turtle          Plazi   \n",
+       "..    ...                  ...                          ...            ...   \n",
+       "508  1417  Rosnice šalamounská                               Obojživelníci   \n",
+       "509  1418       Létavka obecná                               Obojživelníci   \n",
+       "510  1419          Bažant paví                                       Ptáci   \n",
+       "511  1420  Sojkovec rezavouchý                                       Ptáci   \n",
+       "512  1421   Kachnice kaštanová                                       Ptáci   \n",
+       "\n",
+       "     cena  k_prohlidce  \n",
+       "0    1000            1  \n",
+       "1    1000            1  \n",
+       "2    5000            1  \n",
+       "3    2000            1  \n",
+       "4    1000            1  \n",
+       "..    ...          ...  \n",
+       "508  1000            1  \n",
+       "509  1000            1  \n",
+       "510  1000            1  \n",
+       "511  1000            1  \n",
+       "512  1000            1  \n",
+       "\n",
+       "[513 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = pandas.read_csv('adopce-zvirat.txt', sep = \";\")\n",
     "data"
@@ -21,9 +190,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'nazev_cz', 'nazev_en', 'trida_cz', 'cena', 'k_prohlidce'], dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data.shape\n",
     "\n",
@@ -32,18 +212,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                     99\n",
+       "nazev_cz        Ibis bílý\n",
+       "nazev_en       White ibis\n",
+       "trida_cz            Ptáci\n",
+       "cena                 3000\n",
+       "k_prohlidce             1\n",
+       "Name: 34, dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data.iloc[34]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nazev_cz</th>\n",
+       "      <th>nazev_en</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>Ibis bílý</td>\n",
+       "      <td>White ibis</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     nazev_cz    nazev_en\n",
+       "34  Ibis bílý  White ibis"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data[['nazev_cz', 'nazev_en']].iloc[[34]]"
    ]
