--- a/11.ipynb
+++ b/11.ipynb
@@ -68,7 +68,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.10"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "0ab6308038d2cec8c055e1a33ccdcd5c08bb223d2a2e1050a6dd64849eeb9529"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
